<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kiriman.EditKirimanActivity">

    <RelativeLayout
        android:id="@+id/rleditdata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleViewerKiriman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="Edit Data Barang Kiriman"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textSize="20sp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleViewerKiriman"
            style="@style/Widget.Material3.CardView.Outlined">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:layout_marginVertical="4dp">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutNamaBarang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"
                    android:text="Nama Barang     :"
                    android:textColor="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/OutDBNamaBarangEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/tvOutNamaBarang"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutBerat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@id/tvOutNamaBarang"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"
                    android:text="Berat                         :"
                    android:textColor="@color/black" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/OutDBBeratEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_below="@id/OutDBNamaBarangEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutBerat"
                    android:textSize="14sp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutPecahBelah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@+id/tvOutBerat"
                    android:textSize="14sp"
                    android:text="Pecah Belah         :"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/OutDBPecahBelahEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/OutDBBeratEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutPecahBelah"
                    android:textSize="14sp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@+id/tvOutPecahBelah"
                    android:textSize="14sp"
                    android:text="Cover                        :"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/OutDBCoverEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_below="@id/OutDBPecahBelahEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutCover"
                    android:textSize="14sp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutAsuransi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@+id/tvOutCover"
                    android:textSize="14sp"
                    android:text="Asuransi                 :"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/OutDBAsuransiEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_below="@id/OutDBCoverEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutAsuransi"
                    android:textSize="14sp"/>
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/dividLogicBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/OutDBAsuransiEdit"
                    app:dividerThickness="2dp"
                    android:layout_marginTop="15dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/SaveButon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/dividLogicBtn"
                    android:layout_alignParentEnd="true"
                    android:text="Save"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/CancelButon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_below="@id/dividLogicBtn"
                    android:layout_toLeftOf="@id/SaveButon"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="Cancel"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>