<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Penerima.EditPenerimaActivity">

    <RelativeLayout
        android:id="@+id/rleditdata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleEditViewerPenerima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="Edit Data Penerima"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textSize="20sp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleEditViewerPenerima"
            style="@style/Widget.Material3.CardView.Outlined">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:layout_marginVertical="4dp">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutNamaPenerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"
                    android:text="Nama Penerima     :"
                    android:textColor="@color/black"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/OutDBNamaPenerimaEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutNamaPenerima"
                    android:textSize="14sp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutNoHp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@id/tvOutNamaPenerima"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"
                    android:text="No. Hp                            :"
                    android:textColor="@color/black" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/OutDBNoHpEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_below="@id/OutDBNamaPenerimaEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutNoHp"
                    android:textSize="14sp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@+id/tvOutNoHp"
                    android:textSize="14sp"
                    android:text="Gender                          :"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/OutDBGenderEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/OutDBNoHpEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutGender"
                    android:textSize="14sp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutKodePos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_below="@+id/tvOutGender"
                    android:textSize="14sp"
                    android:text="Kode Pos                      :"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/OutDBKodePosEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_below="@id/OutDBGenderEdit"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_toEndOf="@id/tvOutKodePos"
                    android:textSize="14sp"/>
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/dividLogicBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/OutDBKodePosEdit"
                    app:dividerThickness="2dp"
                    android:layout_marginTop="15dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/SaveButonPenerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/dividLogicBtn"
                    android:layout_alignParentEnd="true"
                    android:text="Save"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/CancelButonPenerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_below="@id/dividLogicBtn"
                    android:layout_toLeftOf="@id/SaveButonPenerima"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="Cancel"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>